# torch2bt

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: README.md
src/torch2bt/: __init__.py  codegen.py  inspector.py  models.py
src/torch2bt/subnets/: __init__.py
src/torch2bt/testing/: mock_validator.py
tests/: test_codegen.py  test_inspector.py  test_mock_validator.py
